--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,11 @@
 # History of the hARPy #
 ########################
 
+hARPy v2021.1.12
+----------------
+- Fixed an error where unknown MAC addresses could not be determined as "unknown"
+
+
 hARPy v2021.1.9
 ---------------
 - Fixed a memory error that occurred when the sniff results container was full.
