--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,13 @@
 # History of the hARPy #
 ########################
 
+hARPy v2021.3.10
+----------------
+- Code improvements.
+- Performance improvements.
+- The UI has been improved.
+
+
 hARPy v2021.1.13
 ----------------
 - The UI has been improved.
