--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,11 @@
 # History of the hARPy #
 ########################
 
+hARPy v2021.4.17
+----------------
+- The UI has been improved.
+
+
 hARPy v2021.3.10
 ----------------
 - Code improvements.
